--- a/app/src/main/res/layout/activity_my_kart_remote.xml
+++ b/app/src/main/res/layout/activity_my_kart_remote.xml
@@ -6,60 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".MyKartRemote">
 
+    <ProgressBar
+        android:id="@+id/speedBarNeg"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginEnd="140dp"
+        android:max="20"
+        android:min="0"
+        android:progress="0"
+        android:rotation="90"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Switch
         android:id="@+id/steeringToggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="30dp"
+        android:minHeight="48dp"
         android:text="Steering"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="320dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="512dp"
-        android:layout_marginTop="216dp"
-        android:max="100"
-        android:progress="50"
-        android:progressTint="#00FFFFFF"
-        android:rotation="-90"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/batteryLevel"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="88dp"
-        android:indeterminate="false"
-        android:progress="0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/steeringAngle"
-        android:layout_width="388dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="196dp"
-        android:max="100"
-        android:progress="50"
-        android:progressTint="#00FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/steeringToggle" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:text="Acceleration sensor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,31 +35,112 @@
         android:id="@+id/throttleToggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="250dp"
+        android:minHeight="48dp"
         android:text="Throttle"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <SeekBar
+        android:id="@+id/throttleLevelSlider"
+        android:layout_width="350dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="20dp"
+        android:max="15"
+        android:min="-15"
+        android:progress="0"
+        android:progressTint="#00FFFFFF"
+        android:rotation="-90"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBar2"
+        android:id="@+id/batteryLevelBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="183dp"
-        android:layout_marginTop="169dp"
+        android:layout_width="87dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="80dp"
+        android:indeterminate="false"
+        android:max="100"
+        android:progress="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <SeekBar
+        android:id="@+id/steeringAngleSlider"
+        android:layout_width="350dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="25dp"
+        android:max="100"
+        android:progress="50"
+        android:progressTint="#00FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/throttleToggle" />
+        app:layout_constraintTop_toBottomOf="@+id/steeringAngleBar" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="132dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="360dp"
+        android:layout_marginTop="45dp"
+        android:text="Acceleration sensor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/speed"
+        android:id="@+id/steeringAngleBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="232dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="79dp"
-        android:layout_marginTop="1dp"
+        android:layout_width="350dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="200dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/speedBarPos"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="140dp"
+        android:max="20"
+        android:min="0"
+        android:progress="0"
         android:rotation="-90"
-        app:layout_constraintStart_toEndOf="@+id/steeringAngle"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/resetSteering"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="Recenter steering"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Switch
+        android:id="@+id/lightSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:text="Lights"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resetSteering" />
+
+    <TextView
+        android:id="@+id/speedDisplay"
+        android:layout_width="37dp"
+        android:layout_height="28dp"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="610dp"
+        tools:layout_editor_absoluteY="33dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
