--- a/app/src/main/res/layout/activity_my_kart_remote.xml
+++ b/app/src/main/res/layout/activity_my_kart_remote.xml
@@ -4,14 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FDD482"
     tools:context=".MyKartRemote">
+
+    <TextView
+        android:id="@+id/throttleDisplay"
+        android:layout_width="37dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="100dp"
+        android:text="0"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/speedBarNeg"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="160dp"
+        android:layout_width="130dp"
         android:layout_height="40dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="210dp"
         android:layout_marginEnd="140dp"
         android:max="20"
         android:min="0"
@@ -23,46 +35,30 @@
     <Switch
         android:id="@+id/steeringToggle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="200dp"
         android:minHeight="48dp"
         android:text="Steering"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Switch
         android:id="@+id/throttleToggle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="250dp"
         android:minHeight="48dp"
         android:text="Throttle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/throttleLevelSlider"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="20dp"
-        android:max="15"
-        android:min="-15"
-        android:progress="0"
-        android:progressTint="#00FFFFFF"
-        android:rotation="-90"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <ProgressBar
         android:id="@+id/batteryLevelBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="87dp"
-        android:layout_height="16dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="80dp"
+        android:layout_width="90dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="50dp"
         android:indeterminate="false"
         android:max="100"
         android:progress="0"
@@ -71,25 +67,26 @@
 
     <SeekBar
         android:id="@+id/steeringAngleSlider"
+        style="@android:style/Widget.SeekBar"
         android:layout_width="350dp"
         android:layout_height="40dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="25dp"
-        android:max="100"
-        android:progress="50"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="10dp"
+        android:max="600"
+        android:progress="300"
         android:progressTint="#00FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/steeringAngleBar" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="132dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="360dp"
-        android:layout_marginTop="45dp"
+        android:layout_width="130dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="280dp"
         android:text="Acceleration sensor"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <ProgressBar
         android:id="@+id/steeringAngleBar"
@@ -97,18 +94,20 @@
         android:layout_width="350dp"
         android:layout_height="23dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="170dp"
+        android:max="600"
+        android:progress="300"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/speedBarPos"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="160dp"
+        android:layout_width="140dp"
         android:layout_height="40dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="140dp"
-        android:max="20"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="135dp"
+        android:max="5"
         android:min="0"
         android:progress="0"
         android:rotation="-90"
@@ -120,10 +119,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
         android:text="Recenter steering"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Switch
         android:id="@+id/lightSwitch"
@@ -131,6 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
+        android:minHeight="48dp"
         android:text="Lights"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resetSteering" />
@@ -139,8 +138,46 @@
         android:id="@+id/speedDisplay"
         android:layout_width="37dp"
         android:layout_height="28dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="610dp"
-        tools:layout_editor_absoluteY="33dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="190dp"
+        android:text="0"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <SeekBar
+        android:id="@+id/throttleLevelSlider"
+        style="@android:style/Widget.SeekBar"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="20dp"
+        android:max="15"
+        android:min="-15"
+        android:progress="0"
+        android:progressTint="#00FFFFFF"
+        android:rotation="-90"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="45dp"
+        android:text="Battery Voltage"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="5dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
