--- a/app/src/main/res/layout/activity_my_kart_remote.xml
+++ b/app/src/main/res/layout/activity_my_kart_remote.xml
@@ -12,93 +12,32 @@
         android:layout_width="37dp"
         android:layout_height="28dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="100dp"
-        android:text="0"
+        android:layout_marginEnd="75dp"
+        android:text="@string/zero"
         android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/speedBarNeg"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="210dp"
-        android:layout_marginEnd="140dp"
-        android:max="20"
-        android:min="0"
-        android:progress="0"
-        android:rotation="90"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Switch
-        android:id="@+id/steeringToggle"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="200dp"
-        android:minHeight="48dp"
-        android:text="Steering"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <Switch
-        android:id="@+id/throttleToggle"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginEnd="250dp"
-        android:minHeight="48dp"
-        android:text="Throttle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <ProgressBar
-        android:id="@+id/batteryLevelBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="90dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="50dp"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/steeringAngleSlider"
-        style="@android:style/Widget.SeekBar"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="10dp"
-        android:max="600"
-        android:progress="300"
-        android:progressTint="#00FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/steeringAngleBar" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/speedDisplay"
+        android:layout_width="37dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="210dp"
+        android:text="@string/zero"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/accelerometer"
         android:layout_width="130dp"
         android:layout_height="48dp"
-        android:layout_marginStart="280dp"
-        android:text="Acceleration sensor"
+        android:layout_marginStart="275dp"
+        android:text="@string/accelerometer"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <ProgressBar
-        android:id="@+id/steeringAngleBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="350dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="170dp"
-        android:max="600"
-        android:progress="300"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/speedBarPos"
@@ -110,65 +49,144 @@
         android:max="5"
         android:min="0"
         android:progress="0"
+        android:progressTint="#000000"
         android:rotation="-90"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/resetSteering"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="Recenter steering"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <Switch
-        android:id="@+id/lightSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:minHeight="48dp"
-        android:text="Lights"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resetSteering" />
-
-    <TextView
-        android:id="@+id/speedDisplay"
-        android:layout_width="37dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="190dp"
-        android:text="0"
-        android:textColor="#000000"
+    <ProgressBar
+        android:id="@+id/speedBarNeg"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="210dp"
+        android:layout_marginEnd="140dp"
+        android:max="5"
+        android:min="0"
+        android:progress="0"
+        android:progressTint="#000000"
+        android:rotation="90"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/batteryLevelBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="95dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="60dp"
+        android:indeterminate="false"
+        android:max="100"
+        android:progress="0"
+        android:progressTint="#4CAF50"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/steeringBarLeft"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="160dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="170dp"
+        android:max="300"
+        android:min="0"
+        android:progress="0"
+        android:progressTint="#000000"
+        android:rotation="180"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+    <ProgressBar
+        android:id="@+id/steeringBarRight"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="160dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="170dp"
+        android:max="300"
+        android:min="0"
+        android:progressTint="#000000"
+        app:layout_constraintStart_toEndOf="@+id/steeringBarLeft"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <SeekBar
         android:id="@+id/throttleLevelSlider"
         style="@android:style/Widget.SeekBar"
         android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="140dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="125dp"
         android:layout_marginEnd="20dp"
         android:max="15"
         android:min="-15"
         android:progress="0"
         android:progressTint="#00FFFFFF"
         android:rotation="-90"
+        android:thumb="@drawable/ic_launcher_foreground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <SeekBar
+        android:id="@+id/steeringAngleSlider"
+        style="@android:style/Widget.SeekBar"
+        android:layout_width="350dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        android:max="600"
+        android:progress="300"
+        android:progressTint="#00FFFFFF"
+        android:thumb="@drawable/ic_launcher_foreground"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/steeringBarLeft" />
+
+    <Switch
+        android:id="@+id/throttleToggle"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginEnd="250dp"
+        android:minHeight="48dp"
+        android:text="@string/throttle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    <Switch
+        android:id="@+id/steeringToggle"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginStart="15dp"
+        android:minHeight="48dp"
+        android:text="@string/steering"
+        app:layout_constraintStart_toEndOf="@+id/resetSteering"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    <Switch
+        android:id="@+id/lightSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:minHeight="48dp"
+        android:text="@string/lights"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/resetSteering"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    <Button
+        android:id="@+id/resetSteering"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recenter_steering"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
-        android:layout_marginEnd="45dp"
-        android:text="Battery Voltage"
+        android:text="@string/battery"
         android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -179,5 +197,26 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="5dp"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="300dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="10dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="715dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
