--- a/app/src/main/res/layout/activity_my_kart_remote.xml
+++ b/app/src/main/res/layout/activity_my_kart_remote.xml
@@ -220,8 +220,7 @@
         android:progress="500"
         android:progressBackgroundTint="#FFD8BD92"
         android:progressTint="#00FFFFFF"
-        android:rotation="180"
-        android:thumb="@drawable/steering_wheel_flipped"
+        android:thumb="@drawable/steering_wheel"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/steeringBarLeft" />
 
